--- a/main.html
+++ b/main.html
@@ -8,8 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+	<h1>Signup Form Car</h1>
+	
+	<form action="/action_page.php" method="post">
+		<label for="name">Name-</label>
+		<input type="text" id="name" placeholder="Name" required><br>
+
+		<label for="email">Email-</label>
+		<input type="email" id="email" placeholder="Email" required><br>
+
+		<label for="gender_m">Gender-</label>
+		<input type="radio" name="gender" id="Gender_m" required>M
+		
+		<label for="gender_f"></label>
+		<input type="radio" name="gender" id="gender_f">F<br>
+
+		<label for="cars">Car Brands-</label>
+		<input type="Select" id="cars" placeholder="--Please choose an option--" required><br>
+
+		<label for="age">Age-</label>
+		<input type="number" id="age" placeholder="Age" required><br>
+
+		<label for="dob">DOB-</label>
+		<input type="date" id="dob" placeholder="" required><br>
+
+		<label for="tel">Phone Number-</label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx"><br>
+
+		<label for="password">Password-</label>
+		<input type="tel" id="password" placeholder="Password" required><br>
+
+		<label for="tos">I agree to the TOS</label>
+		<input type="checkbox" id="tos" placeholder="" required><br>
+		<br>
+		<button type="submit">Submit-Button</button>
+		
+	</form>
 
 </body>
 
