--- a/main.html
+++ b/main.html
@@ -25,7 +25,13 @@
 		<input type="radio" name="gender" id="gender_f">F<br>
 
 		<label for="cars">Car Brands-</label>
-		<input type="Select" id="cars" placeholder="--Please choose an option--" required><br>
+		<input id="cars" placeholder="--Please choose an option--" required>
+		<select id="cars" name="cars">
+            <option>Audi</option>
+            <option>BMW</option>
+            <option>Kia</option>
+        </select>
+		<br>
 
 		<label for="age">Age-</label>
 		<input type="number" id="age" placeholder="Age" required><br>
@@ -41,7 +47,9 @@
 
 		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" id="tos" placeholder="" required><br>
+		
 		<br>
+		
 		<button type="submit">Submit-Button</button>
 		
 	</form>
